--- a/thermal_preprocess.ipynb
+++ b/thermal_preprocess.ipynb
@@ -387,526 +387,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10, 369)\n",
-      "(10, 37)\n",
-      "(10, 370)\n",
-      "(10, 371)\n",
-      "(10, 372)\n",
-      "(10, 373)\n",
-      "(10, 374)\n",
-      "(10, 375)\n",
-      "(10, 376)\n",
-      "(10, 377)\n",
-      "(10, 378)\n",
-      "(10, 4)\n",
-      "(10, 414)\n",
-      "(10, 43)\n",
-      "(10, 445)\n",
-      "(10, 45)\n",
-      "(10, 470)\n",
-      "(10, 471)\n",
-      "(10, 472)\n",
-      "(10, 473)\n",
-      "(10, 474)\n",
-      "(10, 475)\n",
-      "(10, 476)\n",
-      "(10, 477)\n",
-      "(10, 478)\n",
-      "(10, 479)\n",
-      "(10, 48)\n",
-      "(10, 480)\n",
-      "(10, 481)\n",
-      "(10, 482)\n",
-      "(10, 483)\n",
-      "(10, 484)\n",
-      "(10, 451)\n",
-      "(10, 452)\n",
-      "(10, 453)\n",
-      "(10, 454)\n",
-      "(10, 455)\n",
-      "(10, 456)\n",
-      "(10, 457)\n",
-      "(10, 458)\n",
-      "(10, 459)\n",
-      "(10, 46)\n",
-      "(10, 460)\n",
-      "(10, 461)\n",
-      "(10, 462)\n",
-      "(10, 463)\n",
-      "(10, 464)\n",
-      "(10, 465)\n",
-      "(10, 466)\n",
-      "(10, 467)\n",
-      "(10, 468)\n",
-      "(10, 469)\n",
-      "(10, 486)\n",
-      "(10, 487)\n",
-      "(10, 488)\n",
-      "(10, 489)\n",
-      "(10, 49)\n",
-      "(10, 490)\n",
-      "(10, 491)\n",
-      "(10, 492)\n",
-      "(10, 493)\n",
-      "(10, 494)\n",
-      "(10, 495)\n",
-      "(10, 496)\n",
-      "(10, 497)\n",
-      "(10, 498)\n",
-      "(10, 499)\n",
-      "(10, 5)\n",
-      "(10, 1029)\n",
-      "(10, 1044)\n",
-      "(10, 106)\n",
-      "(10, 1075)\n",
-      "(10, 1090)\n",
-      "(10, 1105)\n",
-      "(10, 1146)\n",
-      "(10, 1161)\n",
-      "(10, 1177)\n",
-      "(10, 1192)\n",
-      "(10, 1207)\n",
-      "(10, 1222)\n",
-      "(10, 1238)\n",
-      "(10, 500)\n",
-      "(10, 501)\n",
-      "(10, 502)\n",
-      "(10, 503)\n",
-      "(10, 504)\n",
-      "(10, 505)\n",
-      "(10, 506)\n",
-      "(10, 507)\n",
-      "(10, 508)\n",
-      "(10, 509)\n",
-      "(10, 51)\n",
-      "(10, 510)\n",
-      "(10, 511)\n",
-      "(10, 512)\n",
-      "(10, 513)\n",
-      "(10, 514)\n",
-      "(10, 516)\n",
-      "(10, 517)\n",
-      "(10, 518)\n",
-      "(10, 519)\n",
-      "(10, 52)\n",
-      "(10, 520)\n",
-      "(10, 521)\n",
-      "(10, 522)\n",
-      "(10, 523)\n",
-      "(10, 524)\n",
-      "(10, 525)\n",
-      "(10, 526)\n",
-      "(10, 527)\n",
-      "(10, 528)\n",
-      "(10, 529)\n",
-      "(10, 53)\n",
-      "(10, 531)\n",
-      "(10, 532)\n",
-      "(10, 533)\n",
-      "(10, 534)\n",
-      "(10, 535)\n",
-      "(10, 536)\n",
-      "(10, 537)\n",
-      "(10, 538)\n",
-      "(10, 539)\n",
-      "(10, 54)\n",
-      "(10, 540)\n",
-      "(10, 541)\n",
-      "(10, 542)\n",
-      "(10, 543)\n",
-      "(10, 544)\n",
-      "(10, 545)\n",
-      "(10, 547)\n",
-      "(10, 548)\n",
-      "(10, 549)\n",
-      "(10, 55)\n",
-      "(10, 565)\n",
-      "(10, 566)\n",
-      "(10, 567)\n",
-      "(10, 568)\n",
-      "(10, 569)\n",
-      "(10, 57)\n",
-      "(10, 570)\n",
-      "(10, 571)\n",
-      "(10, 572)\n",
-      "(10, 573)\n",
-      "(10, 574)\n",
-      "(10, 575)\n",
-      "(10, 577)\n",
-      "(10, 578)\n",
-      "(10, 579)\n",
-      "(10, 58)\n",
-      "(10, 580)\n",
-      "(10, 581)\n",
-      "(10, 582)\n",
-      "(10, 583)\n",
-      "(10, 584)\n",
-      "(10, 585)\n",
-      "(10, 586)\n",
-      "(10, 587)\n",
-      "(10, 588)\n",
-      "(10, 589)\n",
-      "(10, 59)\n",
-      "(10, 590)\n",
-      "(10, 592)\n",
-      "(10, 593)\n",
-      "(10, 594)\n",
-      "(10, 595)\n",
-      "(10, 596)\n",
-      "(10, 597)\n",
-      "(10, 598)\n",
-      "(10, 599)\n",
-      "(10, 6)\n",
-      "(10, 60)\n",
-      "(10, 600)\n",
-      "(10, 601)\n",
-      "(10, 602)\n",
-      "(10, 603)\n",
-      "(10, 604)\n",
-      "(10, 605)\n",
-      "(10, 606)\n",
-      "(10, 607)\n",
-      "(10, 608)\n",
-      "(10, 609)\n",
-      "(10, 61)\n",
-      "(10, 610)\n",
-      "(10, 611)\n",
-      "(10, 612)\n",
-      "(10, 613)\n",
-      "(10, 614)\n",
-      "(10, 615)\n",
-      "(10, 616)\n",
-      "(10, 617)\n",
-      "(10, 618)\n",
-      "(10, 619)\n",
-      "(10, 62)\n",
-      "(10, 699)\n",
-      "(10, 7)\n",
-      "(10, 70)\n",
-      "(10, 71)\n",
-      "(10, 715)\n",
-      "(10, 716)\n",
-      "(10, 717)\n",
-      "(10, 718)\n",
-      "(10, 719)\n",
-      "(10, 72)\n",
-      "(10, 720)\n",
-      "(10, 721)\n",
-      "(10, 722)\n",
-      "(10, 723)\n",
-      "(10, 724)\n",
-      "(10, 725)\n",
-      "(10, 726)\n",
-      "(10, 727)\n",
-      "(10, 728)\n",
-      "(10, 729)\n",
-      "(10, 73)\n",
-      "(10, 730)\n",
-      "(10, 731)\n",
-      "(10, 732)\n",
-      "(10, 733)\n",
-      "(10, 734)\n",
-      "(10, 735)\n",
-      "(10, 736)\n",
-      "(10, 737)\n",
-      "(10, 738)\n",
-      "(10, 739)\n",
-      "(10, 74)\n",
-      "(10, 359)\n",
-      "(10, 36)\n",
-      "(10, 360)\n",
-      "(10, 368)\n",
-      "(10, 450)\n",
-      "(10, 47)\n",
-      "(10, 485)\n",
-      "(10, 50)\n",
-      "(10, 515)\n",
-      "(10, 530)\n",
-      "(10, 546)\n",
-      "(10, 576)\n",
-      "(10, 591)\n",
-      "(10, 621)\n",
-      "(10, 622)\n",
-      "(10, 623)\n",
-      "(10, 624)\n",
-      "(10, 625)\n",
-      "(10, 626)\n",
-      "(10, 627)\n",
-      "(10, 628)\n",
-      "(10, 629)\n",
-      "(10, 63)\n",
-      "(10, 630)\n",
-      "(10, 631)\n",
-      "(10, 632)\n",
-      "(10, 633)\n",
-      "(10, 634)\n",
-      "(10, 635)\n",
-      "(10, 636)\n",
-      "(10, 637)\n",
-      "(10, 638)\n",
-      "(10, 639)\n",
-      "(10, 64)\n",
-      "(10, 640)\n",
-      "(10, 641)\n",
-      "(10, 642)\n",
-      "(10, 643)\n",
-      "(10, 644)\n",
-      "(10, 645)\n",
-      "(10, 646)\n",
-      "(10, 647)\n",
-      "(10, 648)\n",
-      "(10, 649)\n",
-      "(10, 65)\n",
-      "(10, 650)\n",
-      "(10, 652)\n",
-      "(10, 653)\n",
-      "(10, 654)\n",
-      "(10, 655)\n",
-      "(10, 656)\n",
-      "(10, 657)\n",
-      "(10, 658)\n",
-      "(10, 659)\n",
-      "(10, 66)\n",
-      "(10, 660)\n",
-      "(10, 661)\n",
-      "(10, 662)\n",
-      "(10, 663)\n",
-      "(10, 664)\n",
-      "(10, 665)\n",
-      "(10, 666)\n",
-      "(10, 667)\n",
-      "(10, 668)\n",
-      "(10, 669)\n",
-      "(10, 67)\n",
-      "(10, 670)\n",
-      "(10, 671)\n",
-      "(10, 672)\n",
-      "(10, 673)\n",
-      "(10, 674)\n",
-      "(10, 675)\n",
-      "(10, 676)\n",
-      "(10, 677)\n",
-      "(10, 678)\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import pandas as pd \n",
+    "import pickle \n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "import numpy as np\n",
-    "import pickle\n",
-    "from pandas import DataFrame\n",
-    "from matplotlib import pyplot as plt\n",
     "import os\n",
     "\n",
-    "thermal_folder = \"thermal_images/\"\n",
-    "timestamp_folder = \"project_data/thermal_timestamps.csv\"\n",
-    "label_folder = \"project_data/labels.csv\"\n",
+    "thermal_predictions = \"thermal_predictions/\"\n",
     "\n",
-    "filter_temp = 32\n",
-    "\n",
-    "timestamps = pd.read_csv(timestamp_folder, index_col=0)\n",
-    "labels = pd.read_csv(label_folder, usecols=[0,1], dtype={\"id\": int, \"label\": str}, index_col=0)\n",
-    "game = pd.read_csv(label_folder, usecols=[0,1], dtype={\"id\": int, \"game\": int}, index_col=0)\n",
-    "# print timestamps.loc[10]\n",
-    "\n",
-    "def get_story_by_frame(subject, frame):\n",
-    "    second= frame/10.0 if (subject<15) else frame\n",
-    "    sub_data = timestamps.loc[subject].values\n",
-    "    if (second < sub_data[0]): return 0\n",
-    "    i, j = 0, 1\n",
-    "    story = -1\n",
-    "    for k in range(3):\n",
-    "        if (sub_data[i] <= second <= sub_data[j]):\n",
-    "            story = k+1\n",
-    "            break\n",
-    "        i += 2\n",
-    "        j += 2\n",
-    "    return story\n",
-    "\n",
-    "def get_label_by_frame(subject, frame):\n",
-    "    story = get_story_by_frame(subject, frame)\n",
-    "    if (story == 0 or story == -1): return (story, -1)\n",
-    "    return (story, labels.loc[subject].values[0][story-1])\n",
-    "\n",
-    "def frame_with_info_traverse(thermal_path):\n",
-    "    walker = os.walk(thermal_path)\n",
-    "    walker.next() # skip the main dir\n",
-    "    for root, dirs, files in walker:\n",
-    "        if (len(files) == 0): continue # if the folder is empty or is root folder\n",
-    "        subject = int(root.split(\"/\")[-2].strip(\"Subject\")) # thermal_images/Subject10/CSV images => 10\n",
-    "        for f in files:\n",
-    "            frame_nr = int(f.split(\"_\")[1].strip(\".csv\")) # FL-000020_369.csv => 369\n",
-    "            story, label = get_label_by_frame(subject, frame_nr) # get the story number and label of the frame\n",
-    "            if (story == -1): continue # skip if the frame is between the stories\n",
-    "            csv_frame = pd.read_csv(os.path.join(root, f)).as_matrix() # read the csv data\n",
-    "            yield (subject, story, frame_nr, csv_frame, label)\n",
-    "\n",
-    "def extract_frame_features(frame_1):\n",
-    "    frame_1[frame_1 < filter_temp] = 0 #filter all pixels lower than 30\n",
-    "    frame_1 = frame_1[np.where(frame_1 != 0)].flatten() # new array with only filtered values\n",
-    "    features = np.array([frame_1.min(), frame_1.max(), np.mean(frame_1)]) # get mean, max and min values of pixels\n",
-    "    features = np.append(features, features[1] - features[0]) # add max difference in pixels\n",
-    "    bin_places = np.histogram(frame_1, np.linspace(filter_temp, 37.0, 101))[0] # take the values of the bins\n",
-    "#     plot_bins(bin_places) # plot the bins if needed\n",
-    "    features = np.concatenate((features, bin_places)) # add primary features to bin features\n",
-    "    return features\n",
-    "\n",
-    "\n",
-    "csv_generator = frame_with_info_traverse(thermal_folder)\n",
-    "baseline_count = dict(zip(range(1, 25), np.zeros(24)))\n",
-    "baseline = dict(zip(range(1, 25), np.zeros(24)))\n",
-    "control_group = {}\n",
-    "test_group = {}\n",
-    "c = 0\n",
-    "for subject, story, fnr, frame, label in csv_generator:\n",
-    "    print (subject, fnr)\n",
-    "    c +=1\n",
-    "    if (c == 300): break\n",
-    "    features = extract_frame_features(frame)\n",
-    "    if (story==0):\n",
-    "        baseline_count[subject] = baseline_count[subject] + 1\n",
-    "        baseline[subject] = baseline[subject] + features\n",
-    "        continue\n",
-    "    update_dict = control_group if (game.loc[subject].values[0]==0) else test_group\n",
-    "    if ((subject, story) not in update_dict): \n",
-    "        update_dict[(subject, story)] = np.array([features, label])\n",
-    "    else:\n",
-    "        update_dict[(subject, story)] = np.vstack((update_dict[(subject, story)], [features, label]))\n",
-    "\n",
-    "\n",
-    "for key in baseline.keys():\n",
-    "    if baseline_count[key]==0: continue\n",
-    "    baseline[key] = baseline[key]/baseline_count[key]\n",
-    "\n",
-    "def serialize(group, fi):\n",
-    "    with open(fi, 'wb') as f:\n",
-    "        pickle.dump(group, f)\n",
-    "\n",
-    "serialize(control_group, \"control_group_data.pickle\")\n",
-    "serialize(test_group, \"test_group.pickle\")\n",
-    "serialize(baseline, \"baseline.pickle\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1: 0.0,\n",
-       " 2: 0.0,\n",
-       " 3: 0.0,\n",
-       " 4: 0.0,\n",
-       " 5: 0.0,\n",
-       " 6: 0.0,\n",
-       " 7: 0.0,\n",
-       " 8: 0.0,\n",
-       " 9: 0.0,\n",
-       " 10: array([  3.20036900e+01,   3.51235482e+01,   3.33830720e+01,\n",
-       "          3.11985825e+00,   1.38975000e+02,   1.59775000e+02,\n",
-       "          1.65275000e+02,   1.59350000e+02,   1.80525000e+02,\n",
-       "          1.89025000e+02,   1.85250000e+02,   2.20075000e+02,\n",
-       "          2.27875000e+02,   2.40050000e+02,   2.18300000e+02,\n",
-       "          2.33000000e+02,   2.25900000e+02,   1.96600000e+02,\n",
-       "          2.19725000e+02,   2.16225000e+02,   2.11950000e+02,\n",
-       "          1.90950000e+02,   2.11000000e+02,   2.18050000e+02,\n",
-       "          1.99550000e+02,   2.21100000e+02,   2.25900000e+02,\n",
-       "          2.32850000e+02,   2.12375000e+02,   2.44475000e+02,\n",
-       "          2.58175000e+02,   2.63400000e+02,   2.65175000e+02,\n",
-       "          2.47850000e+02,   2.85175000e+02,   2.96925000e+02,\n",
-       "          3.19825000e+02,   3.24725000e+02,   3.13725000e+02,\n",
-       "          3.27500000e+02,   3.24725000e+02,   2.99500000e+02,\n",
-       "          2.98400000e+02,   2.62850000e+02,   2.86550000e+02,\n",
-       "          3.00275000e+02,   3.14100000e+02,   3.14750000e+02,\n",
-       "          2.89150000e+02,   2.29200000e+02,   2.15500000e+02,\n",
-       "          1.75450000e+02,   1.47250000e+02,   1.31175000e+02,\n",
-       "          1.16075000e+02,   1.04325000e+02,   1.00050000e+02,\n",
-       "          8.32250000e+01,   8.52000000e+01,   7.18500000e+01,\n",
-       "          5.56500000e+01,   4.00500000e+01,   2.95250000e+01,\n",
-       "          2.20500000e+01,   1.63250000e+01,   1.17000000e+01,\n",
-       "          8.37500000e+00,   5.87500000e+00,   2.95000000e+00,\n",
-       "          1.75000000e+00,   4.50000000e-01,   2.25000000e-01,\n",
-       "          7.50000000e-02,   7.50000000e-02,   2.50000000e-02,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00,   0.00000000e+00,\n",
-       "          0.00000000e+00,   0.00000000e+00]),\n",
-       " 11: 0.0,\n",
-       " 12: 0.0,\n",
-       " 13: 0.0,\n",
-       " 14: 0.0,\n",
-       " 15: 0.0,\n",
-       " 16: 0.0,\n",
-       " 17: 0.0,\n",
-       " 18: 0.0,\n",
-       " 19: 0.0,\n",
-       " 20: 0.0,\n",
-       " 21: 0.0,\n",
-       " 22: 0.0,\n",
-       " 23: 0.0,\n",
-       " 24: 0.0}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "def deserialize(f):\n",
-    "    with open(f, 'rb') as fil:\n",
-    "        return pickle.load(fil)\n",
+    "    with open(f, \"rb\") as ser:\n",
+    "        return pickle.load(ser)\n",
     "\n",
-    "baseline = deserialize(\"baseline.pickle\")\n",
-    "baseline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('project_data', [], ['labels.csv', 'thermal_timestamps.csv'])\n"
-     ]
-    },
-    {
-     "ename": "StopIteration",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-3416eb49a4be>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mwalker\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwalk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"project_data\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mprint\u001b[0m \u001b[0mwalker\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mStopIteration\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "import os \n",
-    "walker = os.walk(\"project_data\")\n",
-    "for i in range(2):\n",
-    "    print walker.next()"
+    "def cross_validate(data, fname, method='knn'):\n",
+    "    preds = {}\n",
+    "    for key in data.keys():\n",
+    "        if (method=='knn'):\n",
+    "            nclass = KNeighborsClassifier(n_neighbors=20, weights='distance')\n",
+    "        if (method=='svm'):\n",
+    "            nclass = SVC()\n",
+    "        if (method=='lc'):\n",
+    "            nclass = LogisticRegression()\n",
+    "        test = (key, data[key])\n",
+    "        del data[key]\n",
+    "        train = np.vstack(data.values())\n",
+    "        nclass.fit(np.vstack(train[:,0]), train[:,1].astype(int))\n",
+    "        knnpred = nclass.predict(np.vstack(test[1][:,0]))\n",
+    "        truth, lie = sum(knnpred), len(knnpred)-sum(knnpred)\n",
+    "        p = 1 if truth > lie else 0\n",
+    "        preds[key] = [p, test[1][0][1]]\n",
+    "        data[key] = test[1]\n",
+    "    with open(os.path.join(thermal_predictions, method, method + \"_\" + fname+\".pickle\"), \"wb\") as f:\n",
+    "        pickle.dump(preds, f)\n",
+    "\n",
+    "complete_group = {}\n",
+    "control_group = deserialize(\"thermal_data/control_group.pickle\")\n",
+    "test_group = deserialize(\"thermal_data/test_group.pickle\")\n",
+    "complete_group.update(control_group)\n",
+    "complete_group.update(test_group)\n",
+    "\n",
+    "cross_validate(control_group, \"control\", method='knn')\n",
+    "cross_validate(test_group, \"test\", method='knn')\n",
+    "cross_validate(complete_group, \"complete\", method='knn')\n",
+    "\n",
+    "cross_validate(control_group, \"control\", method='lc')\n",
+    "cross_validate(test_group, \"test\", method='lc')\n",
+    "cross_validate(complete_group, \"complete\", method='lc')\n",
+    "\n",
+    "cross_validate(control_group, \"control\", method='svm')\n",
+    "cross_validate(test_group, \"test\", method='svm')\n",
+    "cross_validate(complete_group, \"complete\", method='svm')"
    ]
   }
  ],
