Add predictions baseline_diff and svm thermal

--- a/prediction_models.ipynb
+++ b/prediction_models.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -83,8 +83,14 @@
       "Correct classification rate of knn_control: 27.7778%\n",
       "Correct classification rate of knn_test: 26.6667%\n",
       "Correct classification rate of knn_complete: 28.7879%\n",
+      "Correct classification rate of svm_control: 61.1111%\n",
+      "Correct classification rate of svm_test: 66.6667%\n",
       "Correct classification rate of lc_control: 38.8889%\n",
-      "Correct classification rate of lc_test: 46.6667%\n"
+      "Correct classification rate of lc_complete: 42.4242%\n",
+      "Correct classification rate of lc_test: 46.6667%\n",
+      "Correct classification rate of base_diff_test: 66.6667%\n",
+      "Correct classification rate of base_diff_control: 55.5556%\n",
+      "Correct classification rate of base_diff_complete: 60.6061%\n"
      ]
     }
    ],
@@ -128,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,31 +146,96 @@
     "import os\n",
     "\n",
     "thermal_predictions = \"thermal_predictions/\"\n",
+    "label_folder = \"project_data/labels.csv\"\n",
+    "game = pd.read_csv(label_folder, usecols=[0,3], dtype={\"id\": int, \"game\": int})\n",
+    "game = game.drop([0,1,3]).values\n",
+    "test = game[game[:,1]==1]\n",
+    "control = game[game[:,1]==0]\n",
     "\n",
     "def deserialize(f):\n",
     "    with open(f, \"rb\") as ser:\n",
     "        return pickle.load(ser)\n",
     "\n",
-    "def cross_validate(data, fname, method='knn'):\n",
+    "baseline = deserialize(\"thermal_data/baseline.pickle\")\n",
+    "\n",
+    "def mean_predict(data, from_subj, fname, method='base_diff'):\n",
     "    preds = {}\n",
-    "    for key in data.keys():\n",
-    "        test = (key, data[key])\n",
-    "        del data[key]\n",
-    "        train = np.vstack(data.values())\n",
-    "        nclass.fit(np.vstack(train[:,0]), train[:,1].astype(int))\n",
-    "        knnpred = nclass.predict(np.vstack(test[1][:,0]))\n",
-    "        truth, lie = sum(knnpred), len(knnpred)-sum(knnpred)\n",
-    "        p = 1 if truth > lie else 0\n",
-    "        preds[key] = [p, test[1][0][1]]\n",
-    "        data[key] = test[1]\n",
+    "    for subject, game in from_subj:\n",
+    "        sub_base = baseline[subject]\n",
+    "        st1 = np.vstack(np.vstack(data[(subject, 1)])[:,0]) - sub_base\n",
+    "        st2 = np.vstack(np.vstack(data[(subject, 2)])[:,0]) - sub_base\n",
+    "        st3 = np.vstack(np.vstack(data[(subject, 3)])[:,0]) - sub_base\n",
+    "        st1, st2, st3 = sum(st1)/len(st1), sum(st2)/len(st2), sum(st3)/len(st3)\n",
+    "        st1, st2, st3 = [1, np.sqrt(st1.dot(st1))], [2, np.sqrt(st2.dot(st2))], [3, np.sqrt(st3.dot(st3))]\n",
+    "        strs = np.vstack((st1, st2, st3))\n",
+    "        lie = np.where(strs == np.max(strs[:,1]))[0][0]\n",
+    "        for i in range(1,4):\n",
+    "            p = 0 if(i==lie) else 1\n",
+    "            preds[(subject, i)] = [p, data[(subject, i)][0][1]]\n",
+    "        \n",
     "    with open(os.path.join(thermal_predictions, method, method + \"_\" + fname+\".pickle\"), \"wb\") as f:\n",
     "        pickle.dump(preds, f)\n",
+    "        \n",
+    "#     for key in data.keys():\n",
+    "#         test = (key, data[key])\n",
+    "#         del data[key]\n",
+    "#         train = np.vstack(data.values())\n",
+    "#         nclass.fit(np.vstack(train[:,0]), train[:,1].astype(int))\n",
+    "#         knnpred = nclass.predict(np.vstack(test[1][:,0]))\n",
+    "#         truth, lie = sum(knnpred), len(knnpred)-sum(knnpred)\n",
+    "#         p = 1 if truth > lie else 0\n",
+    "#         preds[key] = [p, test[1][0][1]]\n",
+    "#         data[key] = test[1]\n",
     "\n",
     "complete_group = {}\n",
     "control_group = deserialize(\"thermal_data/control_group.pickle\")\n",
     "test_group = deserialize(\"thermal_data/test_group.pickle\")\n",
     "complete_group.update(control_group)\n",
-    "complete_group.update(test_group)\n"
+    "complete_group.update(test_group)\n",
+    "mean_predict(control_group, control, 'control')\n",
+    "mean_predict(test_group, test, 'test')\n",
+    "mean_predict(complete_group, game, 'complete')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4.35994902  0.25926232  5.49662478  4.35322393  4.20367802]\n",
+      " [ 3.30334821  2.04648634  6.19270966  2.99654674  2.66827275]\n",
+      " [ 6.21133833  5.29142094  1.34579945  5.13578121  1.84439866]\n",
+      " [ 7.85335148  8.53975293  4.94236837  8.46561485  0.79645477]\n",
+      " [ 5.0524609   0.65286504  4.28122328  0.96530916  1.27159972]\n",
+      " [ 5.96745309  2.26012001  1.06945684  2.20306207  3.49826285]\n",
+      " [ 4.67787485  2.01743226  6.40406725  4.83069836  5.0523672 ]\n",
+      " [ 3.86892651  7.93637454  5.80004179  1.62298599  7.00752347]\n",
+      " [ 9.6455108   5.00008361  8.89520064  3.41613653  5.67144128]\n",
+      " [ 4.27545963  4.36747263  7.76559185  5.35604173  9.53742227]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([8]), array([0]))"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.random.seed(2)\n",
+    "x = np.vstack(10*np.array(np.random.random((10, 5))))\n",
+    "print x\n",
+    "y = np.array(range(1,6))\n",
+    "np.where(x == np.max(x))[0]"
    ]
   }
  ],
